change duration of token add readme

--- a/config/config.env
+++ b/config/config.env
@@ -1,18 +1,18 @@
 //Expiration token in seconds
-EXT = 60
+EXT = 300
 
 //Expiration refresh token in minutes
-RTEXT = 120
+RTEXT = 600
 
 // SEED
 SEED = YTBGD9YjAUhkjQk9ZXcb
 
 //MONGO CONFIG
 
-USERMONGO = ecamargo
-PASSWORDMONGO= ecamargo
+USERMONGO = oauthusr
+PASSWORDMONGO= Xy37v7TNhuDrB
 HOSTMONGO = 35.226.19.219:27017
-DATABASE= s2
+DATABASE= oauth20
 
 
 
