--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "swagger-ui-express": "^4.1.4",
     "sync-request": "^6.1.0",
     "underscore": "^1.9.1",
-    "underscore.string": "^3.3.5"
+    "underscore.string": "^3.3.5",
+    "yarn": "^1.22.4"
   }
 }
