resolve issue about name of refres_token param in response

--- a/config/config.env
+++ b/config/config.env
@@ -3,7 +3,7 @@
 //Expiration token in seconds
 EXT =
 
-//Expiration refresh token in minutes
+//Expiration refresh token in seconds
 RTEXT =
 
 // SEED
